internal-mcgw/header-httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: header-httproute
  labels:
    gateway: internal-http
spec:
  hostnames:
    - "gateway-demo.internal"
  rules:
    - matches:
        - headers:
            values:
              env: canary
      forwardTo:
        - backendRef:
            group: net.gke.io
            kind: ServiceImport
            name: green
          port: 8080
    - forwardTo:
        - backendRef:
            group: net.gke.io
            kind: ServiceImport
            name: blue
          port: 8080
