internal-mcgw/split-httproute.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: split-httproute
  labels:
    gateway: internal-http
spec:
  hostnames:
    - "gateway-demo.internal"
  rules:
    - forwardTo:
        - backendRef:
            group: net.gke.io
            kind: ServiceImport
            name: blue
          port: 8080
          weight: 90
        - backendRef:
            group: net.gke.io
            kind: ServiceImport
            name: green
          port: 8080
          weight: 10
